# traffic_API

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile-postgres-pandas-numpy.dockerfile  README.md  aws_scripts.sh  bump_version.sh  data_explore.ipynb  docker-compose-proxy.yml  docker-compose.yml  docker-task.sh  import_csv.py  makefile  package.json  pyproject.toml  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-image.yml  docker-publish.yml  draft-new-release.yml  publish-new-release.yml  terraform.yml  terraform_deploy.yml  terraform_destroy.yml
API/: models.py  views.py
API/management/commands/: populate_db.py
API/migrations/: 0001_initial.py
API/tests/: test_commands.py  test_models.py
app/: .dockerignore  .env-template  .isort.cfg  Dockerfile  data_explore.ipynb  docker-compose.yml  import_csv.py  pyproject.toml  pytest.ini  requirements.txt  run.sh
app/API/: admin.py  models.py  serializers.py  views.py
app/API/management/commands/: createsu.py
app/API/tests/: test_admin.py  test_commands.py  test_models.py
app/traffic_API/: asgi.py  settings.py  urls.py
deploy/: dns.tf  ecs.tf  load_balancer.tf  main.tf  makefile  network.tf  variables.tf
deploy/CF/: AWS_deploy.sh  alert.yaml  auth-proxy-ha-github-orga.yaml  cluster.yaml  commands_AWS_deploy.sh  docker_build.sh  ecs-webapp-stack.yml  s3.yaml  service-cluster-alb.yaml  vpc-2azs.yaml  waf.yaml
deploy/aws-policies/: TrafficAppApi-CI-ecs-policies.json  TrafficAppApi-CI-rds-policies.json  TrafficAppApi-CI-s3-policies.json  TrafficAppApi-ProxyCIPushECR.json
deploy/terraform/: bastion.tf  database.tf  makefile  outputs.tf  s3.tf  sample.tfvars  variables.tf
deploy/terraform/aws-policies/: TrafficAppApi-CI-bastion-policies.json  TrafficAppApi-CI-customdns-policies.json  TrafficAppApi-CI-loadbalancer-policies.json  TrafficAppApi-CI.json
deploy/terraform/templates/ecs/: container-definitions.json.tpl
scripts/: entrypoint.sh
traffic_API/: data_explore.ipynb  manage.py  pyproject.toml  pytest.ini  run.sh  settings.py  urls.py  wsgi.py
traffic_API/API/: models.py  serializers.py  views.py
traffic_API/API/management/commands/: createsu.py
traffic_API/API/tests/: test_models.py
traffic_API/traffic_API/: asgi.py  settings.py  urls.py  wsgi.py
